--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body>
     <h6>কি লাগবো? কিছু প্রজেক্ট আছে এখানে, মন চাইলে দেখ</h6>
-    <a href="https://sayed-anowar.netlify.app/" target="_blank"><button class="button button1">Resume</button></a>
+    <a href="https://sayedanowar.xyz/" target="_blank"><button class="button button1">Resume</button></a>
     <a href="TypeWriter.html" target="_blank"><button class="button button1">TypeWriter</button></a>
     <a href="RandomTextGenerator.html" target="_blank"><button class="button button1">RandomTextGenerator</button></a>
     <a href="PrimeFinder.html" target="_blank"><button class="button button1">Prime Finder</button></a>
