index page ta update korlam

--- a/Calculator.html
+++ b/Calculator.html
@@ -70,8 +70,13 @@
 
 <body>
     <label for="input_1">Input first number:</label>
-    <textarea id="input_1" name="input_field" rows="1" cols="10">
-    </textarea>
+    <textarea id="input_1" name="input_field" rows="2" cols="10"></textarea>
+    <br>
+    <label for="input_2">Input second number:</label>
+    <textarea id="input_2" name="input_field" rows="2" cols="10"></textarea>
+    <br>
+    <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
 </body>
 
 </html>
