--- a/Calculator.html
+++ b/Calculator.html
@@ -56,6 +56,40 @@
             cursor: pointer;
         }
 
+        input {
+            position: relative;
+            background-color: black;
+            color: rgb(6, 255, 172);
+            border: 2px solid rgb(6, 255, 172);
+            border-radius: 10px;
+            padding: 15px;
+            bottom: 15px;
+        }
+
+        button {
+            background-color: #000000;
+            border-radius: 10px;
+            color: rgb(6, 255, 172);
+            border: 2px solid rgb(6, 255, 172);
+            line-height: 1;
+            font-size: 20px;
+            margin-left: 0;
+            margin-right: 0;
+            padding: 20px 25px;
+            display: inline-block;
+            vertical-align: middle;
+            -webkit-transform: perspective(1px) translateZ(0);
+            transform: perspective(1px) translateZ(0);
+            min-width: 200px;
+            text-align: center;
+            padding: 16px 32px;
+
+        }
+        button:hover{
+            background-color: rgb(6, 255, 172);
+            border-radius: 10px;
+            color: #000000;
+        }
         html {
             overflow: scroll;
         }
@@ -69,14 +103,22 @@
 </head>
 
 <body>
-    <label for="input_1">Input first number:</label>
-    <textarea id="input_1" name="input_field" rows="2" cols="10"></textarea>
-    <br>
-    <label for="input_2">Input second number:</label>
-    <textarea id="input_2" name="input_field" rows="2" cols="10"></textarea>
-    <br>
     <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fnum" name="fname" value="0"><br><br>
+
+    <label for="fname">First name:</label>
+    <input type="number" id="snum" name="fname" value="0"><br><br>
+
+
+
+    <button onclick="TextChange()">asdasd</button>
+
+    <p id="displayText">0</p>
 </body>
+<script>
+    function TextChange() {
+        document.getElementById("displayText").innerHTML = document.getElementById("fnum").value + document.getElementById("snum").value;
+    }
+</script>
 
 </html>
