--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <a href="RandomTextGenerator.html" target="_blank"><button class="button">RandomTextGenerator</button></a>
     <a href="PrimeFinder.html" target="_blank"><button class="button">Prime Finder</button></a>
     <a href="Calculator.html" target="_blank"><button class="button">Calculator</button></a>
+    <a href="RandomQuotes.html" target="_blank"><button class="button">Random Quotes</button></a>
     <h6>দামে কম মানে ভালো সার্ভিস<br>01610099913</h6>
 </body>
 
